--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,19 @@
   },
   "require-dev": {
     "laravel/sail": "^1.25"
+  },
+  "require": {
+    "openai-php/client": "^0.7.3",
+    "symfony/http-client": "^6.3",
+    "nyholm/psr7": "^1.8",
+    "ext-pdo": "*",
+    "ext-pgsql": "*",
+    "php-amqplib/php-amqplib": "^3.6",
+    "probots-io/pinecone-php": "^0.0.3"
+  },
+  "config": {
+    "allow-plugins": {
+      "php-http/discovery": true
+    }
   }
 }
