--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,35 @@ version: '3'
 services:
   web:
     container_name: php-conf-chat-web
-    image: php:8.2-fpm-alpine
-    working_dir: '/app'
+    build: .
+    working_dir: '/var/www'
     ports:
       - 80:80
     command: php -S 0.0.0.0:80 -t public
     volumes:
-      - '.:/app:z'
-volumes:
-  rabbitmq_data:
+      - '.:/var/www:z'
+    env_file:
+      - .env
+
+  db:
+    image: ankane/pgvector
+    environment:
+      POSTGRES_DB: chat
+      POSTGRES_USER: app
+      POSTGRES_PASSWORD: app
+    ports:
+      - "5432:5432"
+
+  rabbitmq:
+    image: "rabbitmq:3-management"
+    hostname: "rabbitmq"
+    environment:
+      RABBITMQ_DEFAULT_USER: "guest"
+      RABBITMQ_DEFAULT_PASS: "guest"
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+  adminer:
+    image: adminer
+    ports:
+      - "8080:8080"
